examples/test/testpolicy10837.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10837
  namespace: namespace179
spec:
  podSelector:
    matchLabels:
      key36: value13
      key20: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value0
      podSelector:
        matchLabels:
          key31: value38
          key9: value42
